# face_recognition_openvino

./: CMakeLists.txt  README.md  face_recognition_adapter.py  metrics.py  run_pipeline.py  run_pipeline_for_all.py  train_data.json  train_data_converted.py
data/: asya-new.txt  asya.txt  dasha-new.txt  dasha.txt  serge.txt
include/: IOU.hpp  alignment.hpp  classifier.hpp  classifier_model.hpp  detectors.hpp  feature_extractor.hpp  load.hpp  tmp_database.hpp  utility.hpp
models/: Sphereface.xml  classifier.xml  face-detection-adas-0001.xml  facial-landmarks-35-adas-0001.xml
source/: IOU.cpp  alignment.cpp  classifier.cpp  classifier_model.cpp  detectors.cpp  feature_extractor.cpp  main.cpp  utility.cpp
